--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lan="en">
     <head>
         <title>My website</title>
+        <style>
+            h1 {
+                color: blue;
+            }
+        </style>
     </head>
     <body>
         <h1>Welcome to my GitHub Pages Website!</h1>
